8355299: [lworld] C2 compilation fails with "unexpected yanked node"